[package]
name = "paratro-sdk"
version = "1.1.5"
edition = "2021"
description = "Official Rust SDK for Paratro MPC Wallet Gateway"
license = "MIT"
repository = "https://github.com/paratro/paratro-sdk-rust"
keywords = ["paratro", "mpc", "wallet", "x402", "crypto"]
categories = ["api-bindings", "cryptography"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
dotenvy = "0.15"
