[package]
name = "paratro-sdk"
version = "1.2.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
dotenvy = "0.15"
